[package]
name = "zmap_ssh_probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = { version = "4.3.22", features = ["derive"] }
async-ssh2-tokio = "0.7.0"
tokio = { version = "1", features = ["full"] }